// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ResultsDataset correctly with hits 1`] = `
<main
  data-test-id="datasets"
  id="content"
>
  <section
    className="row mb-3"
  >
    <div
      className="col-6 col-lg-4"
    />
    <div
      className="col-6 col-lg-4 offset-lg-4"
    >
      <div
        className="d-flex justify-content-end"
      >
        <Button
          className="fdk-button fdk-button-black-toggle selected"
          color="primary"
          onClick={[Function]}
          tag="button"
        >
          Relevance
        </Button>
        <Button
          className="fdk-button fdk-button-black-toggle"
          color="primary"
          onClick={[Function]}
          tag="button"
        >
          Recently published
        </Button>
      </div>
    </div>
  </section>
  <section
    className="row"
  >
    <aside
      className="search-filters col-lg-4 d-none d-lg-block"
    >
      <span
        aria-hidden="false"
        className="uu-invisible"
      >
        Filtrering tilgang
      </span>
      <FilterPills
        history={
          Object {
            "push": [Function],
          }
        }
        location={
          Object {
            "search": "",
          }
        }
        locationSearch={Object {}}
        losItems={Object {}}
        publishers={null}
        themesItems={Object {}}
      />
      <div>
        <Modal
          autoFocus={true}
          backdrop={true}
          backdropTransition={
            Object {
              "mountOnEnter": true,
              "timeout": 150,
            }
          }
          centered={false}
          fade={true}
          isOpen={false}
          keyboard={true}
          modalTransition={
            Object {
              "timeout": 300,
            }
          }
          onClosed={[Function]}
          onOpened={[Function]}
          role="dialog"
          toggle={[Function]}
          zIndex={1050}
        >
          <ModalHeader
            charCode={215}
            closeAriaLabel="Close"
            tag="h5"
            toggle={[Function]}
            wrapTag="div"
          >
            Filter
          </ModalHeader>
          <ModalBody
            tag="div"
          >
            <div
              className="search-filters"
            >
              <FilterTree
                activeFilter={null}
                aggregations={Array []}
                collapseItems={false}
                handleFiltering={[Function]}
                referenceDataItems={Object {}}
                title="Theme"
              />
              <FilterBox
                activeFilter={null}
                filter={
                  Object {
                    "buckets": Array [
                      Object {
                        "count": 2,
                        "key": "GOVE",
                      },
                      Object {
                        "count": 1,
                        "key": "AGRI",
                      },
                      Object {
                        "count": 1,
                        "key": "ENVI",
                      },
                      Object {
                        "count": 1,
                        "key": "HEAL",
                      },
                    ],
                  }
                }
                filters={null}
                htmlKey={1}
                onClick={[Function]}
                themesItems={Object {}}
                title="EU-theme (phasing out)"
              />
              <FilterBox
                activeFilter={null}
                filter={
                  Object {
                    "buckets": Array [
                      Object {
                        "count": 4,
                        "key": "PUBLIC",
                      },
                    ],
                  }
                }
                filters={Object {}}
                htmlKey={2}
                onClick={[Function]}
                themesItems={null}
                title="Access"
              />
              <FilterTree
                activeFilter={null}
                aggregations={
                  Array [
                    Object {
                      "count": 4,
                      "key": "/STAT",
                    },
                    Object {
                      "count": 2,
                      "key": "/STAT/972417858",
                    },
                    Object {
                      "count": 2,
                      "key": "/STAT/972417858/971040238",
                    },
                    Object {
                      "count": 1,
                      "key": "/STAT/972417807",
                    },
                    Object {
                      "count": 1,
                      "key": "/STAT/972417807/971526920",
                    },
                    Object {
                      "count": 1,
                      "key": "/STAT/972417874",
                    },
                    Object {
                      "count": 1,
                      "key": "/STAT/972417874/988983837",
                    },
                  ]
                }
                collapseItems={false}
                handleFiltering={[Function]}
                referenceDataItems={null}
                title="Owner"
              />
              <FilterBox
                activeFilter={null}
                filter={
                  Object {
                    "buckets": Array [
                      Object {
                        "count": 4,
                        "key": "Ukjent",
                      },
                    ],
                  }
                }
                filters={null}
                htmlKey={3}
                onClick={[Function]}
                themesItems={null}
                title="Spatial"
              />
              <FilterBox
                activeFilter={null}
                filter={
                  Object {
                    "buckets": Array [
                      Object {
                        "count": 4,
                        "key": "Ukjent",
                      },
                    ],
                  }
                }
                filters={null}
                htmlKey={4}
                onClick={[Function]}
                themesItems={null}
                title="Provenance"
              />
            </div>
          </ModalBody>
          <ModalFooter
            tag="div"
          >
            <Button
              className="fdk-button"
              color="primary"
              onClick={[Function]}
              tag="button"
            >
              Close
            </Button>
          </ModalFooter>
        </Modal>
        <FilterTree
          activeFilter={null}
          aggregations={Array []}
          collapseItems={true}
          handleFiltering={[Function]}
          referenceDataItems={Object {}}
          title="Theme"
        />
        <FilterBox
          activeFilter={null}
          filter={
            Object {
              "buckets": Array [
                Object {
                  "count": 2,
                  "key": "GOVE",
                },
                Object {
                  "count": 1,
                  "key": "AGRI",
                },
                Object {
                  "count": 1,
                  "key": "ENVI",
                },
                Object {
                  "count": 1,
                  "key": "HEAL",
                },
              ],
            }
          }
          filters={null}
          htmlKey={1}
          onClick={[Function]}
          themesItems={Object {}}
          title="EU-theme (phasing out)"
        />
        <FilterBox
          activeFilter={null}
          filter={
            Object {
              "buckets": Array [
                Object {
                  "count": 4,
                  "key": "PUBLIC",
                },
              ],
            }
          }
          filters={Object {}}
          htmlKey={2}
          onClick={[Function]}
          themesItems={null}
          title="Access"
        />
        <FilterTree
          activeFilter={null}
          aggregations={
            Array [
              Object {
                "count": 4,
                "key": "/STAT",
              },
              Object {
                "count": 2,
                "key": "/STAT/972417858",
              },
              Object {
                "count": 2,
                "key": "/STAT/972417858/971040238",
              },
              Object {
                "count": 1,
                "key": "/STAT/972417807",
              },
              Object {
                "count": 1,
                "key": "/STAT/972417807/971526920",
              },
              Object {
                "count": 1,
                "key": "/STAT/972417874",
              },
              Object {
                "count": 1,
                "key": "/STAT/972417874/988983837",
              },
            ]
          }
          collapseItems={false}
          handleFiltering={[Function]}
          referenceDataItems={null}
          title="Owner"
        />
        <FilterBox
          activeFilter={null}
          filter={
            Object {
              "buckets": Array [
                Object {
                  "count": 4,
                  "key": "Ukjent",
                },
              ],
            }
          }
          filters={null}
          htmlKey={3}
          onClick={[Function]}
          themesItems={null}
          title="Spatial"
        />
        <FilterBox
          activeFilter={null}
          filter={
            Object {
              "buckets": Array [
                Object {
                  "count": 4,
                  "key": "Ukjent",
                },
              ],
            }
          }
          filters={null}
          htmlKey={4}
          onClick={[Function]}
          themesItems={null}
          title="Provenance"
        />
      </div>
    </aside>
    <section
      className="col-12 col-lg-8 offset-lg-4 d-flex justify-content-center position-relative"
    >
      <div
        className="position-absolute d-flex"
        style={
          Object {
            "left": 15,
          }
        }
      >
        <a
          className="d-flex justify-content-center align-items-center"
          href="http://localhost:8080/datasets.rss"
        >
          <img
            alt="RSS icon"
            src="/img/icon-feed-sm.svg"
            style={
              Object {
                "height": "15px",
                "marginRight": "5px",
              }
            }
          />
          RSS
        </a>
        <a
          className="d-flex justify-content-center align-items-center ml-4"
          href="http://localhost:8080/datasets.atom"
        >
          <img
            alt="Atom icon"
            src="/img/icon-feed-sm.svg"
            style={
              Object {
                "height": "15px",
                "marginRight": "5px",
              }
            }
          />
          Atom
        </a>
      </div>
      <span
        aria-hidden="false"
        className="uu-invisible"
      >
        Sidepaginering.
      </span>
      <PaginationBoxView
        activeClassName="active"
        breakClassName="break-me"
        breakLabel={
          <span>
            ...
          </span>
        }
        containerClassName="pagination"
        disableInitialCallback={true}
        disabledClassName="disabled"
        forcePage={0}
        marginPagesDisplayed={1}
        nextClassName="next"
        nextLabel="Neste side"
        onPageChange={[Function]}
        pageCount={1}
        pageRangeDisplayed={2}
        previousClassName="previous"
        previousLabel="Forrige side"
        subContainerClassName="pages pagination"
      />
    </section>
  </section>
</main>
`;

exports[`should render ResultsDataset correctly with minimum of props 1`] = `
<main
  data-test-id="datasets"
  id="content"
>
  <section
    className="row mb-3"
  >
    <div
      className="col-6 col-lg-4"
    />
    <div
      className="col-6 col-lg-4 offset-lg-4"
    >
      <div
        className="d-flex justify-content-end"
      >
        <Button
          className="fdk-button fdk-button-black-toggle selected"
          color="primary"
          onClick={[Function]}
          tag="button"
        >
          Relevance
        </Button>
        <Button
          className="fdk-button fdk-button-black-toggle"
          color="primary"
          onClick={[Function]}
          tag="button"
        >
          Recently published
        </Button>
      </div>
    </div>
  </section>
  <section
    className="row"
  >
    <aside
      className="search-filters col-lg-4 d-none d-lg-block"
    >
      <span
        aria-hidden="false"
        className="uu-invisible"
      >
        Filtrering tilgang
      </span>
      <FilterPills
        history={
          Object {
            "push": [Function],
          }
        }
        location={
          Object {
            "search": "",
          }
        }
        locationSearch={Object {}}
        losItems={Object {}}
        publishers={null}
        themesItems={Object {}}
      />
    </aside>
    <section
      className="col-12 col-lg-8 offset-lg-4 d-flex justify-content-center position-relative"
    >
      <div
        className="position-absolute d-flex"
        style={
          Object {
            "left": 15,
          }
        }
      >
        <a
          className="d-flex justify-content-center align-items-center"
          href="http://localhost:8080/datasets.rss"
        >
          <img
            alt="RSS icon"
            src="/img/icon-feed-sm.svg"
            style={
              Object {
                "height": "15px",
                "marginRight": "5px",
              }
            }
          />
          RSS
        </a>
        <a
          className="d-flex justify-content-center align-items-center ml-4"
          href="http://localhost:8080/datasets.atom"
        >
          <img
            alt="Atom icon"
            src="/img/icon-feed-sm.svg"
            style={
              Object {
                "height": "15px",
                "marginRight": "5px",
              }
            }
          />
          Atom
        </a>
      </div>
      <span
        aria-hidden="false"
        className="uu-invisible"
      >
        Sidepaginering.
      </span>
      <PaginationBoxView
        activeClassName="active"
        breakClassName="break-me"
        breakLabel={
          <span>
            ...
          </span>
        }
        containerClassName="pagination"
        disableInitialCallback={true}
        disabledClassName="disabled"
        forcePage={0}
        marginPagesDisplayed={1}
        nextClassName="next"
        nextLabel="Neste side"
        onPageChange={[Function]}
        pageCount={1}
        pageRangeDisplayed={2}
        previousClassName="previous"
        previousLabel="Forrige side"
        subContainerClassName="pages pagination"
      />
    </section>
  </section>
</main>
`;
